# security

./: AGENTS.md  README.md  opencode.json  pyproject.toml
.github/: dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: vetting.md
.github/workflows/: agent-process-issue.yml  agent-review-pr.yml  auto-review.yml  ci-reusable.yml  ci.yml  dependabot-cooldown-check.yml  issue-validate.yml  merge-escalation.yml  (+2 more)
.handoffs/: request-req-1782808789-197914.md
adrs/: 0003-npm-cloudflare-workers-types.md  0004-npm-drizzle-kit.md  0005-npm-drizzle-orm.md  0006-npm-hono.md  0007-npm-typescript.md  0008-npm-vitest.md  0009-npm-wrangler.md  0010-npm-zod.md  0011-npm-pnpm.md  0013-flathub-LocalSend.md  0014-npm--anthropic-ai-claude-code.md  0015-npm-{}.md  0016-dnf-timeshift.md  0017-npm--anthropic-ai-claude-code.md  0018-dnf-borgbackup.md  0019-npm--anthropic-ai-claude-code.md
checks/: gate-cve.sh  gate-flatpak-permissions.sh  gate-install-scripts.sh  gate-license.sh  gate-quarantine.sh  gate-registry-repo.sh  scored-depdepth.sh  scored-distro.sh  scored-maintainers.sh  scored-postxz.sh  scored-scorecard.sh
config/: conventions.json  rsax-policy.yml
docs/: break-glass-merge.md  pr-merge-patterns.md  rax-env-vars.md  tool-decision-lifecycle.md
lib/: __init__.py  common.sh  hitl_router.py  rax-config-print.py  rax-config.sh  rax-feedback.sh  rax-secrets.sh  rax_config.py
policy/: vetting.yaml
tests/: test-enforcement.sh  test-manifest.sh  test-opencode-permissions-one.py  test-opencode-permissions.py  test-self-audit.sh  test_hitl_router.py  test_rax_repo_awareness.py
(+13 files in other folders)
