[project]
name = "eqdmc-security"
version = "2.1.0"
description = "Security tooling — HITL approval, vetting, policy enforcement"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
